# allnitr

./: .gitignore  README.md
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/endpoints/: pipeline.py  quiz.py  summarize.py  upload.py
backend/app/services/: file_parser.py  quiz_maker.py  summarizer.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.jsx  main.jsx
frontend/src/api/: client.js
frontend/src/components/: Quiz.jsx  Summary.jsx  Upload.jsx
frontend/src/context/: StudyContext.jsx
frontend/src/pages/: Home.jsx  StudySession.jsx
infra/: docker-compose.yml
infra/docker/: backend.Dockerfile  frontend.Dockerfile
