[project]
name = "allnitr"
version = "0.1.0"
description = "For helping students study for their upcoming exams."
authors = [{ name = "Jasper Markarian" }]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "python-dotenv",
    "requests",
    "aiohttp",
    "starlette",
    "sqlalchemy",
    "transformers",
    "torch",
]

[tool.black]
line-length = 88
target-version = ['py312']
